--- a/catalog-service/src/main/resources/application.properties
+++ b/catalog-service/src/main/resources/application.properties
@@ -3,7 +3,10 @@ server.port=8081
 server.shutdown=graceful
 management.endpoints.web.exposure.include=*
 
+catalog.page.size=10
+
 # Database
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:15432/postgres}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
+spring.jpa.open-in-view=false
