--- a/deployment/docker-compose/infra.yml
+++ b/deployment/docker-compose/infra.yml
@@ -8,7 +8,7 @@ services:
       - "15432:5432"
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=pass@6888
       - POSTGRES_DB=postgres
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
