--- a/.github/workflows/catalog-service.yml
+++ b/.github/workflows/catalog-service.yml
@@ -32,14 +32,14 @@ jobs:
       - name: Build with Maven
         run: ./mvnw -ntp verify
 
-      - if: ${{ github.ref == 'refs/head/main' }}
+      - if: ${{ github.ref == 'refs/heads/main' }}
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - if: ${{ github.ref == 'refs/head/main' }}
+      - if: ${{ github.ref == 'refs/heads/main' }}
         name: Build and Push Docker Image
         run: |
           mvnw.cmd spring-boot:build-image -DskipTests
