--- a/.github/workflows/catalog-service.yml
+++ b/.github/workflows/catalog-service.yml
@@ -42,5 +42,5 @@ jobs:
       - if: ${{ github.ref == 'refs/heads/main' }}
         name: Build and Push Docker Image
         run: |
-          mvnw.cmd spring-boot:build-image -DskipTests
+          ./mvnw spring-boot:build-image -DskipTests
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/bookstore-catalog-service
